@@ -1,3 +1,12 @@
+OCaml 4.13 maintenance branch
+-----------------------------
+
+### Bug fixes:
+
+- #10698, #10726: Free the alternate signal stack when the main OCaml
+  code or an OCaml thread stops.
+  (Xavier Leroy, review by David Allsopp and Damien Doligez)
+
 OCaml 4.13.1 (01 October 2021)
 --------------------------------
 
